--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,40 @@
 
 #list-items li{
   display:inline;
+  font-size: 1em;
+  font-weight: bold;
 }
  h1, h3, h4{
   text-align: center;
 }
+.heading{
+  background-color: coral;
+  padding: 5px;
+}
 body{
-  background-color: #d3a292;
+  background-color: #6d6a69;
+}
+#about img{
+  display: block;
+  margin: 0 auto;
+  height: 100px;
+  border-radius:100%;
+}
+#input, #about{
+  color:white;
+  background-color: rgba(0,0,0,.3);
+  border-radius: 2%;
+  padding-top: 5px;
+}
+a:hover, a:visited, a:link{
+  color: black;
+}
+.ping{
+  color:red;
+}
+.pong{
+  color:blue;
+}
+.ping-pong{
+  color: green;
 }
